# numflow.py

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  [[  0.5          0.5         -1.  data.csv  generate.py  installation  launch.sh  linactivate  macactivate  makefile  opengldemo.py  pyproject.toml  readme.md  reqeuirements.txt  requirements.txt  run.py  run3.py  runlog.txt  script.py  setup.py  sun-dataset.ipynb  test-sun.py  test.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  wheel.yaml
cython_debug/: cython_debug_info_numflow.cnumflow.common  cython_debug_info_numflow.cnumflow.load  cython_debug_info_numflow.cnumflow.math
docs/: index.html
docs-src/: index.html  package-lock.json  package.json  vite.config.js
docs/app/: index.html
docs/assets/: index-1655b507.js  index-4825d094.css  index-5a38f8f1.js  index-94436004.js  index-e6e77a05.js  index-fc2c12f5.js
docs/canvas/js/: webapp.js
docs/canvas/style/: style.css
docs/src/: index.html  package-lock.json  package.json  vite.config.ts
docs/src/src/: index.css  main.tsx
docs/src/src/components/: Flow.tsx  Post.css  Post.tsx
flow/: .directory  background.py  benchmark.py  build.sh  integration_regular.txt  jsbuild.sh  nginx.conf  runlog.txt  test.py
flow/benchmarks/: integration_random copy.txt
flow/chat/: admin.py  consumers.py  forms.py  models.py  urls.py  views.py
flow/chat/migrations/: 0001_initial.py  0002_auto_20181101_1623.py  0003_auto_20181101_1638.py  0004_auto_20181101_1652.py  0005_auto_20181110_1446.py  0006_auto_20181110_1451.py  0007_auto_20181110_1456.py
flow/chat/static/chat/: datamanager.js
flow/chat/templates/chat/: index.html  room.html
flow/flow/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
flow/mics/: interpolation_random copy.txt  interpolation_regular.txt
flow/static/static_server/chat/: chat.js  index_bindings.js  room_bindings.js  style.css
flow/visual/: admin.py  commands.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
flow/visual/migrations/: 0001_initial.py  0002_dataset_notebook.py  0002_notebook_nodefile.py  0003_auto_20181120_1834.py  0004_auto_20181120_1912.py  0005_auto_20181120_1913.py  0006_auto_20181123_1011.py  0007_dataset_description.py
flow/visual/modules/: build.sh  compile.py  flow.py
flow/visual/modules/editor/: __init__.py  commands.py  model.py  (+2 more)
flow/visual/processing/: io.py  processing.py
flow/visual/templates/: base.html
numflow/: __init__.py  application.py  dataset.py  integrate.py  load.py  setup.py  visualization.py
numflow/cnumflow/: __init__.py  common.c  common.cpp  common.html  common.pxd  common.pyx  load.c  load.cpp  load.html  load.pyx  math.c  math.cpp  math.html  math.pyx  types.pxd
numflow/cnumflow/cpp/: buffer.hpp  numflow.cpp  numflow.hpp
numflow/compute/: types.hpp
numflow/gl/: gl.py
numflow/graphics/: __init__.py  box.py  camera.py  colormap.py  context.py  geometry.py  glyphs.py  layer.py  matrix.py  primitives.py  program.py  streamline.py  text.py
numflow/graphics/shaders/: box.frag  box.vert  colormap.frag  colormap.vert  glyph.frag  glyph.vert  slice.frag  slice.vert  streamline.frag  streamline.vert
numflow/numflow/renderer/: renderer.py
numflow/numflow/routines/: dataset.py
pyflow/: makefile
pyflow/flow/: background.py  benchmark.py  integration_random.txt  manage.py  setup.py
pyflow/flow/flow/: settings.py  urls.py  wsgi.py
pyflow/flow/mics/: compile.py  integration_random.txt  integration_regular.txt  integration_regular2.txt  interpolation_random.txt  interpolation_regular copy.txt  nginx.conf  nginxmac.conf  table.txt  tables.py
pyflow/flow/visual/: admin.py  commands.py  views.py
pyflow/numflow/: LICENSE.txt  example.py  jsbuild.sh
pyflow/sage/flowapp/: flowapp.js
sage/flowapp/: flowapp.js  instructions.json  style.css
sage/flowapp/shaders/: box_vs.glsl  glyph_vs.glsl  layer_vs.glsl  stream_vs.glsl  text_vs.glsl
src/cpp/: compute.cpp  csv.cpp  csv.hpp  field.cpp  field.hpp
src/numflow/: __init__.py  compute.pyi  dataset.py  encoder.py  exceptions.py  geometry.py  kernels.py  visualization.py
src/numflow/compute/: compute.cpp  csv.cpp  field.cpp  field.hpp  integrate.cpp  integrate.hpp  interpolate.cpp  interpolate.hpp  types.hpp
src/numflow/nodes/: glyphgeometry.py  layer.py
tests/: conftest.py  test_dataset.py  test_io.py  test_kernels.py  test_visualization.py
tests/testdata/: rectilinear.csv
webapp/canvas/js/: data_manager.js  flowapp.js
(+358 files in other folders)
