[build-system]
requires = [
    "setuptools>=42",
    "pybind11~=2.9.2",
    "cmake>=3.22",
    "scikit-build>=0.15.0",
    "numpy>=1.21.2",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-skip = ["*universal2:arm64"]
build = ["cp39-*", "cp310-*", "cp311-*"]
build-verbosity = 1
test-requires = ["pytest", "numpy>=1.21.2"]

[tool.cibuildwheel.macos]
archs = ["universal2"]

[tool.cibuildwheel.linux]
archs = ["auto64"]

[tool.cibuildwheel.windows]
archs = ["auto64"]
